--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Title.js styles */
+.title {
+  display: inline-block;
+  padding: 30px 60px;
+  background:#f4f4f4;
+  border-radius: 20px;
+  font-weight: normal;
+  margin-bottom: 10px;
+}
+
+.subtitle {
+  display: inline-block;
+  color: #555;
+  font-weight: normal;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #f4f4f4;
+  margin-top: 10px;
+  margin-bottom: 60px;
+}
