--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -14,3 +14,11 @@
     background: white;
     border-radius: 10px;
 }
+
+button {
+    display: block;
+    margin: 10px auto;
+    background: yellow;
+
+    border-radius: 8px;
+}
