set the useState to false to hide by default; set onClick to true

--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -17,8 +17,8 @@
 
 button {
     display: block;
-    margin: 10px auto;
+    margin: 0 auto 35px auto;
     background: yellow;
-
     border-radius: 8px;
+
 }
