created className and used className selectors to prevent styles from being global; created separate component css files

--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -1,4 +1,4 @@
-.modal-backdrop {
+.modal-page .modal-backdrop {
     position:fixed;
     top: 0;
     left: 0;
@@ -7,18 +7,10 @@
     background: rgba(0,0,0,0.5);
 }
 
-.modal {
+.modal-page .modal {
     padding: 30px;
     max-width: 480px;
     margin: 200px auto;
     background: white;
     border-radius: 10px;
-}
-
-button {
-    display: block;
-    margin: 0 auto 35px auto;
-    background: yellow;
-    border-radius: 8px;
-
 }
